--- a/principal.html
+++ b/principal.html
@@ -16,8 +16,8 @@
             <div id="titulo2">Comida artesanal</div>
         </div>
         <div>
-            <nav id=menulink>
-                <a href="/menu.html">Nuestro menu</a>
+            <nav>
+                <a id=menulink href="/menu.html">Nuestro menu</a>
             </nav>
         </div>
 
