cambio del 16 enero

--- a/principal.html
+++ b/principal.html
@@ -12,14 +12,19 @@
     <body>
 
         <div>
-            <p id="titulo1">Todo de maíz</p>
-            <div id="titulo2">Comida artesanal</div>
-        </div>
-        <div>
             <nav>
-                <a id=menulink href="/menu.html">Nuestro menu</a>
+                <a id=menulink href="/menu.html">Ve nuestro menu</a>
             </nav>
         </div>
+
+
+        <div>
+            <p id="titulo1">Todo de maíz</p>
+            <div id="titulo2">Comida artesanal</div>
+            <img id="logotipo" src="/Tododemaizproductosartesanales/estilos/imagenes/Todo de maíz logo.png" alt="30rem"
+                width="auto">
+        </div>
+
 
         <div>
             <h1>¿Quienes somos?</h1>
