--- a/principal.html
+++ b/principal.html
@@ -11,23 +11,24 @@
 
     <body>
 
-        <div>
+        <div id=menulink>
             <nav>
-                <a id=menulink href="/menu.html">Ve nuestro menu</a>
+                <a id="link" href="/menu.html">Ve nuestro menu</a>
             </nav>
         </div>
 
 
         <div>
-            <p id="titulo1">Todo de maíz</p>
-            <div id="titulo2">Comida artesanal</div>
-            <img id="logotipo" src="/Tododemaizproductosartesanales/estilos/imagenes/Todo de maíz logo.png" alt="30rem"
+            <img id="logotipo" src="/estilos/imagenes/Todo de maíz logo.png" alt="30rem"
                 width="auto">
         </div>
 
 
         <div>
             <h1>¿Quienes somos?</h1>
+            <p>Somos jovenes emprendedores, que tenemos una pasión por vender comida de <blockquote>calidad</blockquote>.</p>
+
+            <p>Nuestra comida siempre va tener tres cosas por seguro: Higiene, calidad, <blockquote>DELICIOSURA</blockquote>.</p>
         </div>
 
     </body>
