--- a/principal.html
+++ b/principal.html
@@ -11,24 +11,37 @@
 
     <body>
 
-        <div id=menulink>
+        <div id="menulink">
             <nav>
                 <a id="link" href="/menu.html">Ve nuestro menu</a>
             </nav>
         </div>
 
 
-        <div>
+        <div class="enmedio">
             <img id="logotipo" src="/estilos/imagenes/Todo de maíz logo.png" alt="30rem"
                 width="auto">
         </div>
 
 
-        <div>
+        <div class="left">
             <h1>¿Quienes somos?</h1>
-            <p>Somos jovenes emprendedores, que tenemos una pasión por vender comida de <blockquote>calidad</blockquote>.</p>
+            <p>Somos jovenes emprendedores, que tenemos una pasión por vender comida de <strong>CALIDAD.</strong></p>
 
-            <p>Nuestra comida siempre va tener tres cosas por seguro: Higiene, calidad, <blockquote>DELICIOSURA</blockquote>.</p>
+            
+            <H1>Nuestra comida:</H1>
+            <p>Nuestra comida siempre va tener tres cosas por seguro: Higiene, calidad y <strong> DELICIOSURA.</strong></p>
+
+            <h1>Nustros valores:</h1>
+
+            <H1>Compromiso con la comundidad:</H1>
+            <p>En todo de maíz estamos comprometidos con nuestra comunidad, entonces al finl de cada mez donaremo 30% de nuestras ganancias a diferentes caridades.</p>
+            
+            <h1>Como comprar:</h1>
+            <p>Contactanos en nuestro correo: tododemaiz@posible.correo.noreal</p>
+
+            <h1>Proyectos a futuro:</h1>
+            <p>q</p>
         </div>
 
     </body>
