--- a/principal.html
+++ b/principal.html
@@ -19,8 +19,8 @@
 
 
         <div class="enmedio">
-            <img id="logotipo" src="/estilos/imagenes/Todo de maíz logo.png" alt="30rem"
-                width="auto">
+            <img id="logotipo" src="/estilos/imagenes/1e2d2db1-e7d6-4960-a1ba-94c1423fd4b9-removebg-preview.png"
+                alt="30rem" width="auto">
         </div>
 
 
@@ -28,20 +28,22 @@
             <h1>¿Quienes somos?</h1>
             <p>Somos jovenes emprendedores, que tenemos una pasión por vender comida de <strong>CALIDAD.</strong></p>
 
-            
+
             <H1>Nuestra comida:</H1>
-            <p>Nuestra comida siempre va tener tres cosas por seguro: Higiene, calidad y <strong> DELICIOSURA.</strong></p>
+            <p>Nuestra comida siempre va tener tres cosas por seguro: Higiene, calidad y <strong> DELICIOSURA.</strong>
+            </p>
 
             <h1>Nustros valores:</h1>
 
             <H1>Compromiso con la comundidad:</H1>
-            <p>En todo de maíz estamos comprometidos con nuestra comunidad, entonces al finl de cada mez donaremo 30% de nuestras ganancias a diferentes caridades.</p>
-            
+            <p>En todo de maíz estamos comprometidos con nuestra comunidad, entonces al finl de cada mez donaremo 30% de
+                nuestras ganancias a diferentes caridades.</p>
+
             <h1>Como comprar:</h1>
             <p>Contactanos en nuestro correo: tododemaiz@posible.correo.noreal</p>
 
             <h1>Proyectos a futuro:</h1>
-            <p>q</p>
+            <p>Nuestro plan a futuro es expandirnos a toda la zona urbana de Querétaro.s</p>
         </div>
 
     </body>
