--- a/principal.html
+++ b/principal.html
@@ -13,14 +13,13 @@
 
         <div id="menulink">
             <nav>
-                <a id="link" href="/menu.html">Ve nuestro menu</a>
+                <a id="link" href="/Tododemaizproductosartesanales/menu.html">Menú</a>
             </nav>
         </div>
 
 
         <div class="enmedio">
-            <img id="logotipo" src="/estilos/imagenes/1e2d2db1-e7d6-4960-a1ba-94c1423fd4b9-removebg-preview.png"
-                alt="30rem" width="auto">
+            <img id="logotipo" src="/Tododemaizproductosartesanales/estilos/imagenes/logo.png" alt="30rem" width="auto">
         </div>
 
 
@@ -40,7 +39,11 @@
                 nuestras ganancias a diferentes caridades.</p>
 
             <h1>Como comprar:</h1>
-            <p>Contactanos en nuestro correo: tododemaiz@posible.correo.noreal</p>
+            <ul>
+                <li>Contactanos en nuestro correo: tododemaiz@posible.correo.noreal</li>
+                <li>Ve a muestro puesto que se encuentra en la calles #000 al lado de abcdef.</li>
+            </ul>
+
 
             <h1>Proyectos a futuro:</h1>
             <p>Nuestro plan a futuro es expandirnos a toda la zona urbana de Querétaro.s</p>
